--- a/SprintTrainer/Base.lproj/Main.storyboard
+++ b/SprintTrainer/Base.lproj/Main.storyboard
@@ -70,14 +70,84 @@
                     <view key="view" contentMode="scaleToFill" id="UYr-9J-kon">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="CCZ-nc-WZh">
+                                <rect key="frame" x="20" y="96" width="374" height="374"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="CCZ-nc-WZh" secondAttribute="height" multiplier="1:1" id="6ft-DP-vOs"/>
+                                </constraints>
+                            </mapView>
+                            <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="78" translatesAutoresizingMaskIntoConstraints="NO" id="GXL-AZ-PIG" userLabel="Info Stack View">
+                                <rect key="frame" x="20" y="478" width="374" height="217.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MKz-S2-DjX">
+                                        <rect key="frame" x="153.5" y="0.0" width="67" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0rc-8x-QeG">
+                                        <rect key="frame" x="168" y="98.5" width="38" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pace" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ulw-El-dti">
+                                        <rect key="frame" x="168" y="197" width="38" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="PEm-f0-EQJ" userLabel="Button Stack View">
+                                <rect key="frame" x="20" y="703.5" width="374" height="101.5"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aJS-Ad-bST">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="101.5"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="START"/>
+                                        <connections>
+                                            <action selector="startTapped:" destination="Ao7-aw-H9q" eventType="touchUpInside" id="ZLv-6b-TSG"/>
+                                        </connections>
+                                    </button>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="utq-ig-TfG">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="0.0"/>
+                                        <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="STOP"/>
+                                        <connections>
+                                            <action selector="stopTapped:" destination="Ao7-aw-H9q" eventType="touchUpInside" id="IdY-xM-ga6"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="CCZ-nc-WZh" firstAttribute="top" secondItem="tUK-zb-3wd" secondAttribute="top" constant="8" id="3HO-fO-k2y"/>
+                            <constraint firstItem="tUK-zb-3wd" firstAttribute="trailing" secondItem="PEm-f0-EQJ" secondAttribute="trailing" constant="20" id="7NQ-Ym-P5F"/>
+                            <constraint firstItem="GXL-AZ-PIG" firstAttribute="top" secondItem="CCZ-nc-WZh" secondAttribute="bottom" constant="8" id="8gh-Pa-Yuf"/>
+                            <constraint firstItem="GXL-AZ-PIG" firstAttribute="leading" secondItem="tUK-zb-3wd" secondAttribute="leading" constant="20" id="CIE-Do-7vb"/>
+                            <constraint firstItem="tUK-zb-3wd" firstAttribute="bottom" secondItem="PEm-f0-EQJ" secondAttribute="bottom" constant="8" id="FCT-kG-vvj"/>
+                            <constraint firstItem="tUK-zb-3wd" firstAttribute="bottom" secondItem="PEm-f0-EQJ" secondAttribute="bottom" constant="8" id="GSI-1y-7ak"/>
+                            <constraint firstItem="tUK-zb-3wd" firstAttribute="trailing" secondItem="CCZ-nc-WZh" secondAttribute="trailing" constant="20" id="Iwx-TU-bVJ"/>
+                            <constraint firstItem="PEm-f0-EQJ" firstAttribute="top" secondItem="GXL-AZ-PIG" secondAttribute="bottom" constant="8" id="g0Q-pr-u6a"/>
+                            <constraint firstItem="PEm-f0-EQJ" firstAttribute="leading" secondItem="tUK-zb-3wd" secondAttribute="leading" constant="20" id="gvk-Oj-kSe"/>
+                            <constraint firstItem="CCZ-nc-WZh" firstAttribute="leading" secondItem="tUK-zb-3wd" secondAttribute="leading" constant="20" id="j2X-zo-DNz"/>
+                            <constraint firstItem="tUK-zb-3wd" firstAttribute="trailing" secondItem="GXL-AZ-PIG" secondAttribute="trailing" constant="20" id="nB0-FU-9DB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="tUK-zb-3wd"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="IHn-DH-S6p"/>
+                    <connections>
+                        <outlet property="infoStackView" destination="GXL-AZ-PIG" id="qmI-vN-mGu"/>
+                        <outlet property="startButton" destination="aJS-Ad-bST" id="B3F-lh-yb2"/>
+                        <outlet property="stopButton" destination="utq-ig-TfG" id="Ec9-uO-Ffc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ucY-HZ-a3f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1987" y="129"/>
+            <point key="canvasLocation" x="1986.9565217391305" y="128.57142857142856"/>
         </scene>
         <!--Run Details View Controller-->
         <scene sceneID="5QN-0d-5GK">
@@ -92,7 +162,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WzX-XE-p6f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2785" y="125"/>
+            <point key="canvasLocation" x="2794" y="129"/>
         </scene>
         <!--Item-->
         <scene sceneID="GgC-w7-Cfh">
