--- a/SprintTrainer/StoryBoard/Base.lproj/Main.storyboard
+++ b/SprintTrainer/StoryBoard/Base.lproj/Main.storyboard
@@ -71,60 +71,88 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="78" translatesAutoresizingMaskIntoConstraints="NO" id="GXL-AZ-PIG" userLabel="Info Stack View">
-                                <rect key="frame" x="20" y="108" width="374" height="217.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="iX9-Cy-20h">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MKz-S2-DjX">
-                                        <rect key="frame" x="153.5" y="0.0" width="67" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0rc-8x-QeG">
-                                        <rect key="frame" x="168" y="98.5" width="38" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pace" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ulw-El-dti">
-                                        <rect key="frame" x="168" y="197" width="38" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <view hidden="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="t5b-c9-jG9" userLabel="MapUIView">
+                                        <rect key="frame" x="20" y="0.0" width="374" height="0.0"/>
+                                        <subviews>
+                                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="hqu-yr-8Na">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="0.0"/>
+                                            </mapView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="hqu-yr-8Na" secondAttribute="bottom" id="mlo-PU-UHb"/>
+                                            <constraint firstItem="hqu-yr-8Na" firstAttribute="leading" secondItem="t5b-c9-jG9" secondAttribute="leading" id="qby-rS-uu6"/>
+                                            <constraint firstItem="hqu-yr-8Na" firstAttribute="top" secondItem="t5b-c9-jG9" secondAttribute="top" id="r9s-wM-hKP"/>
+                                            <constraint firstAttribute="trailing" secondItem="hqu-yr-8Na" secondAttribute="trailing" id="v8S-f7-Vj6"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1Fh-oq-rMP" userLabel="Logo Stack View">
+                                        <rect key="frame" x="20" y="0.0" width="374" height="352.5"/>
+                                    </stackView>
+                                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="78" translatesAutoresizingMaskIntoConstraints="NO" id="GXL-AZ-PIG" userLabel="Info Stack View">
+                                        <rect key="frame" x="173.5" y="362.5" width="67" height="156"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MKz-S2-DjX">
+                                                <rect key="frame" x="0.0" y="0.0" width="67" height="0.0"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0rc-8x-QeG">
+                                                <rect key="frame" x="14.5" y="78" width="38" height="0.0"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pace" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ulw-El-dti">
+                                                <rect key="frame" x="14.5" y="156" width="38" height="0.0"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="PEm-f0-EQJ" userLabel="Button Stack View">
+                                        <rect key="frame" x="20" y="372.5" width="374" height="352.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aJS-Ad-bST">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="352.5"/>
+                                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <state key="normal" title="START"/>
+                                                <connections>
+                                                    <action selector="startTapped:" destination="Ao7-aw-H9q" eventType="touchUpInside" id="ZLv-6b-TSG"/>
+                                                </connections>
+                                            </button>
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="utq-ig-TfG">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="0.0"/>
+                                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <state key="normal" title="STOP"/>
+                                                <connections>
+                                                    <action selector="stopTapped" destination="Ao7-aw-H9q" eventType="touchUpInside" id="N1z-Bi-kek"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
-                            </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="PEm-f0-EQJ" userLabel="Button Stack View">
-                                <rect key="frame" x="20" y="345.5" width="374" height="457.5"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aJS-Ad-bST">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="457.5"/>
-                                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="START"/>
-                                        <connections>
-                                            <action selector="startTapped:" destination="Ao7-aw-H9q" eventType="touchUpInside" id="ZLv-6b-TSG"/>
-                                        </connections>
-                                    </button>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="utq-ig-TfG">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="0.0"/>
-                                        <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="STOP"/>
-                                        <connections>
-                                            <action selector="stopTapped" destination="Ao7-aw-H9q" eventType="touchUpInside" id="N1z-Bi-kek"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="t5b-c9-jG9" firstAttribute="leading" secondItem="iX9-Cy-20h" secondAttribute="leading" constant="20" id="28w-m6-kfS"/>
+                                    <constraint firstItem="PEm-f0-EQJ" firstAttribute="leading" secondItem="iX9-Cy-20h" secondAttribute="leading" constant="20" id="4ZI-NX-UE2"/>
+                                    <constraint firstAttribute="trailing" secondItem="PEm-f0-EQJ" secondAttribute="trailing" constant="20" id="D5T-FS-j9p"/>
+                                    <constraint firstAttribute="trailing" secondItem="1Fh-oq-rMP" secondAttribute="trailing" constant="20" id="RDS-u0-8wy"/>
+                                    <constraint firstAttribute="trailing" secondItem="t5b-c9-jG9" secondAttribute="trailing" constant="20" id="e3j-rw-duC"/>
+                                    <constraint firstItem="1Fh-oq-rMP" firstAttribute="leading" secondItem="iX9-Cy-20h" secondAttribute="leading" constant="20" id="e5A-cN-3mn"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="tUK-zb-3wd" firstAttribute="bottom" secondItem="PEm-f0-EQJ" secondAttribute="bottom" constant="10" id="3Nu-gU-b5z"/>
-                            <constraint firstItem="GXL-AZ-PIG" firstAttribute="top" secondItem="tUK-zb-3wd" secondAttribute="top" constant="20" id="CJs-6z-793"/>
-                            <constraint firstItem="tUK-zb-3wd" firstAttribute="trailing" secondItem="PEm-f0-EQJ" secondAttribute="trailing" constant="20" id="Uze-I5-9m3"/>
-                            <constraint firstItem="PEm-f0-EQJ" firstAttribute="top" secondItem="GXL-AZ-PIG" secondAttribute="bottom" constant="20" id="W48-tM-1BE"/>
-                            <constraint firstItem="GXL-AZ-PIG" firstAttribute="leading" secondItem="tUK-zb-3wd" secondAttribute="leading" constant="20" id="n2l-8z-W6O"/>
-                            <constraint firstItem="PEm-f0-EQJ" firstAttribute="leading" secondItem="tUK-zb-3wd" secondAttribute="leading" constant="20" id="sxl-LC-Ndf"/>
-                            <constraint firstItem="tUK-zb-3wd" firstAttribute="trailing" secondItem="GXL-AZ-PIG" secondAttribute="trailing" constant="20" id="w7b-Kj-ZbV"/>
+                            <constraint firstItem="iX9-Cy-20h" firstAttribute="leading" secondItem="tUK-zb-3wd" secondAttribute="leading" id="Op1-ej-uOa"/>
+                            <constraint firstItem="tUK-zb-3wd" firstAttribute="bottom" secondItem="iX9-Cy-20h" secondAttribute="bottom" id="TiS-9h-nzR"/>
+                            <constraint firstItem="tUK-zb-3wd" firstAttribute="trailing" secondItem="iX9-Cy-20h" secondAttribute="trailing" id="Xei-eX-aEH"/>
+                            <constraint firstItem="iX9-Cy-20h" firstAttribute="top" secondItem="tUK-zb-3wd" secondAttribute="top" id="ugI-BN-jI7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="tUK-zb-3wd"/>
                     </view>
@@ -132,6 +160,9 @@
                     <connections>
                         <outlet property="distanceLabel" destination="MKz-S2-DjX" id="QfJ-d9-lZp"/>
                         <outlet property="infoStackView" destination="GXL-AZ-PIG" id="qmI-vN-mGu"/>
+                        <outlet property="logoStackView" destination="1Fh-oq-rMP" id="6ZR-Wd-0dv"/>
+                        <outlet property="mapUIView" destination="t5b-c9-jG9" id="BUC-2r-iZv"/>
+                        <outlet property="mapView" destination="hqu-yr-8Na" id="Tf1-3W-GIl"/>
                         <outlet property="paceLabel" destination="Ulw-El-dti" id="lab-4x-bD8"/>
                         <outlet property="startButton" destination="aJS-Ad-bST" id="B3F-lh-yb2"/>
                         <outlet property="stopButton" destination="utq-ig-TfG" id="Ec9-uO-Ffc"/>
@@ -141,7 +172,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ucY-HZ-a3f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1916" y="98"/>
+            <point key="canvasLocation" x="1915.9420289855075" y="97.767857142857139"/>
         </scene>
         <!--Run Details View Controller-->
         <scene sceneID="5QN-0d-5GK">
